# GTI-Graph-based-Tree-Index

./: README.md
GTI/: CMakeLists.txt
GTI/bindings/: CMakeLists.txt  gti_wrapper.cpp  gti_wrapper_2.cpp  gti_wrapper_3.cpp
GTI/src/: CMakeLists.txt  ground_truth.cpp  gti.cpp  process.cpp
